[package]
name = "bottleopener"
version = "0.0.0"
edition = "2021"


[dependencies]
# chip
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
stm32g0xx-hal = { version = "0.1.5", features = ["rt", "stm32g041"] }

# debug
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-probe = { version = "0.3.0", features = ["print-rtt"] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
